fix: Correcciones visuales en el checkbox de contraseña. Queda visible en todo momento

--- a/web/public/assets/css/loader.css
+++ b/web/public/assets/css/loader.css
@@ -1,6 +1,6 @@
 @import url(style.css);
 
-body{
+.loader{
     background-color: var(--first-color-lighter);
     position: absolute;
     top: 50%;
@@ -36,7 +36,7 @@ body{
 }
 
 .lds-spinner div:nth-child(1){
-    transform: rotate(30deg);
+    transform: rotate(0deg);
     animation-delay: -1.1s;
 }
 
