--- a/web/public/assets/css/login.css
+++ b/web/public/assets/css/login.css
@@ -110,6 +110,10 @@ h1{
     justify-content: center;
 }
 
+.none, #eye{
+    display: none;
+}
+
 /*==================== LAYAOUT ====================*/
 .logo{
     width: 25vw;
@@ -130,14 +134,42 @@ h1{
     border-radius: .5rem;
     border-style: none;
     margin-bottom: var(--mb-0-25);
+    float: left;
 }
 
-.showPass{
+.usuario .showPass{
+    display: flex;
+    align-content: center;
+    height: 3rem;
+    width: 20rem;
+    padding-left: 0 1rem;
+    border-radius: .5rem;
+    border-style: none;
+    background-color: white;
+}
+
+.usuario .showPass .form{
+    background-color: transparent;
+}
+
+.usuario .showPass .div-checkbox{
     position: relative;
+    right: 36px;
+    margin: 12px 0;
 }
 
-.showPass span{
-    margin: 0 12px;
+.usuario .showPass .div-checkbox label{
+    position: absolute;
+    background: url(../svg/eye.svg) no-repeat center;
+    display: inline-block;
+    height: 25px;
+    width: 25px;
+    cursor: pointer;
+}
+
+.usuario .showPass .div-checkbox input:checked + label{
+    background-image: url(../svg/eye-slash.svg);
+    cursor: pointer;
 }
 
 .container .boton{
@@ -203,12 +235,13 @@ h1{
     border-style: none;
     justify-content: center;
     text-decoration: none;
-    color: var(--body-color);
+    color: whitesmoke;
     margin-bottom: var(--mb-0-75);
 }
 
 .container .a:hover{
     text-decoration: underline;
+    color: white;
 }
 
 .ciContainerErrors{
